--- a/public/404.html
+++ b/public/404.html
@@ -39,7 +39,7 @@
 
 <html lang="es-es" dir="ltr"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8" />
-    <title>Botmeni</title>
+    <title>Documentación de Botmeni</title>
     <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A Lightweight, Modern Documentation Theme for Hugo" />
